# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/mojo.gni")

# GYP version: mojo/mojo_base.gyp:mojo_public_system_unittests
test("mojo_public_system_unittests") {
  deps = [
    "//mojo/edk/test:run_all_unittests",
    rebase_path("mojo/public/c/system/tests", ".", mojo_root),
    rebase_path("mojo/public/cpp/system", ".", mojo_root),
    rebase_path("mojo/public/cpp/test_support:test_utils", ".", mojo_root),
    rebase_path("testing/gtest", ".", mojo_third_party_root),
  ]

  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
  sources = [
    "core_unittest.cc",
    "macros_unittest.cc",
  ]
}
