# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# GYP version: mojo/mojo_base.gyp:mojo_public_system_unittests
test("mojo_public_system_unittests") {
  deps = [
    "../../system",
    "../../test_support:test_utils",
    "../../../c/system/tests",
    "../../../../edk/test:run_all_unittests",
    "//testing/gtest",
  ]

  public_configs = [ "../../../../build/config:mojo_sdk" ]

  sources = [
    "core_unittest.cc",
    "macros_unittest.cc",
  ]
}
