# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//build/config/mojo.gni")

# GYP version: mojo/mojo_base.gyp:mojo_public_utility_unittests
test("mojo_public_utility_unittests") {
  deps = [
    mojo_root + "mojo/edk/test:run_all_unittests",
    mojo_root + "mojo/public/cpp/system",
    mojo_root + "mojo/public/cpp/test_support:test_utils",
    mojo_root + "mojo/public/cpp/utility",
    mojo_root + "mojo/testing/gtest",
  ]

  sources = [
    "mutex_unittest.cc",
    "run_loop_unittest.cc",
    "thread_unittest.cc",
  ]
}
