# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# GYP version: mojo/mojo_base.gyp:mojo_public_utility_unittests
test("mojo_public_utility_unittests") {
  deps = [
    "../../system",
    "../../test_support:test_utils",
    "../../utility",
    "//mojo/edk/test:run_all_unittests",
    "//testing/gtest",
  ]

  public_configs = [ "../../../../build/config:mojo_sdk" ]
  sources = [
    "run_loop_unittest.cc",
  ]

  # crbug.com/342893
  if (!is_win) {
    sources += [
      "mutex_unittest.cc",
      "thread_unittest.cc",
    ]
  }
}
