# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//build/config/mojo.gni")

import(rebase_path("mojo/public/tools/bindings/mojom.gni", ".", mojo_root))

mojom("test_interfaces") {
  testonly = true
  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
  sources = [
    "math_calculator.mojom",
    "no_module.mojom",
    "rect.mojom",
    "regression_tests.mojom",
    "sample_factory.mojom",
    "sample_import.mojom",
    "sample_import2.mojom",
    "sample_interfaces.mojom",
    "sample_service.mojom",
    "serialization_test_structs.mojom",
    "test_structs.mojom",
    "validation_test_interfaces.mojom",
  ]
}
